--- a/lab1/public/index.html
+++ b/lab1/public/index.html
@@ -62,8 +62,8 @@
               Заповнити шаблон власними даними та завантажити в git репозиторій
             </p>
             <p>
-              <a href=""
-                > </a
+              <a href="https://github.com/Illa2342/Lab/tree/main/lab1"
+                >https://github.com/Illa2342/Lab/tree/main/lab1</a
               >
             </p>
           </article>
@@ -73,8 +73,8 @@
             <h4>Лабораторна робота №2</h4>
             <p>Менеджери залежностей та системи запуску завдань</p>
             <p>
-              <a href=""
-                ></a
+              <a href="https://github.com/Illa2342/Lab/tree/main/lab2"
+                >https://github.com/Illa2342/Lab/tree/main/lab2</a
               >
             </p>
           </article>
